--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="../src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lato&family=Montserrat:ital@0;1&family=Open+Sans&family=Outfit:wght@400;700&family=Poppins&family=Roboto&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Law Firm App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
